-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.5.0, Lustre 2.5.1
-
None
-
server: 2.4.1 RHEL6 ldiskfs
client: lustre-b2_5 build #2 RHEL6 ldiskfs
-
3
-
11296
This issue was created by maloo for sarah <sarah@whamcloud.com>
This issue relates to the following test suite run: http://maloo.whamcloud.com/test_sets/75f79ad4-3eb9-11e3-a21b-52540035b04c.
The sub-test test_32d failed with the following error:
test_32d failed with 1
MDS console:
23:22:48:Lustre: 5409:0:(obd_mount.c:837:lustre_check_exclusion()) Excluding t32fs-OST0000-osc (on exclusion list)
23:22:48:LustreError: 5409:0:(obd_config.c:1303:class_process_proc_param()) t32fs-OST0000-osc: unknown param max_dirty_mb=15
23:22:48:Lustre: DEBUG MARKER: /usr/sbin/lctl conf_param t32fs-MDT0000.lov.stripesize=4M